--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,43 +3,46 @@
         Bootcamp enrollment form
     </h1>
       
-      <form action="" >
-       
+      <form action="" #userForm="ngForm">
+       <p>form data -> {{userForm.value | json}}</p>
+        <hr/>
+        <p>class model -> {{userModel|json }}</p>
         <div class="form-group">
           <label>Name</label>
-          <input type="text" class="form-control" >
+          <input #nam="ngModel" [class.is-invalid]="nam.invalid && nam.touched" type="text" class="form-control" required name="name" [(ngModel)]="userModel.name">
           
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="email"  class="form-control ">
-           
+          <input type="email" #email class="form-control " [(ngModel)]="userModel.email" name="email">
+            <!-- email input is touched : {{email.touched}} -->
+            {{email.className}}
         </div>
         <div class="form-group">
           <label>Telephone</label>
-          <input   type="tel" class="form-control"  /> 
+          <input   type="tel" #phone="ngModel" [class.is-invalid]="phone.invalid && phone.touched" pattern="^\d{10}$" class="form-control " [(ngModel)]="userModel.phone" name="phoneNumber" required /> 
         </div>
         
-        <div ngModelGroup="address">
+        <!-- <div ngModelGroup="address">
           <div class="form-group">
             <label for="" >Street</label>
-            <input type="text" class="form-control"  name="street" >
+            <input type="text" class="form-control"  name="street" [(ngModel)]="userModel.street">
           </div>
           <div class="form-group">
             <label for="" class=""> City</label>
-            <input type="text" class="form-control"  name="city" >
+            <input type="text" class="form-control"  name="city"  [(ngModel)]="userModel.city">
           </div>
           <div class="form-group">
             <label for="" class=""> State</label>
-            <input type="text" class="form-control"  name="state" >
+            <input type="text" class="form-control"  name="state" ngModel>
           </div>
           <div class="form-group">
             <label for="" class=""> Postal Code</label>
-            <input type="text" class="form-control"  name="postalCode">
+            <input type="text" class="form-control"  name="postalCode" ngModel>
           </div>
-        </div>
+        </div> -->
       <div class="form-group"> 
-          <select class="custom-select"  name="interests" >
+          <select class="custom-select"  name="interests" [(ngModel)]="userModel.topic">
               <option selected> I am Interested In </option>
               <option *ngFor="let topic of topics"> {{topic}}</option>
           </select>
@@ -47,16 +50,16 @@
       <div class="form-group  mb-3">
           <label >Time preference</label>
           <div class="form-check">
-            <input class="form-check-input"  type="radio" name="timePreference" value="morning" >
+            <input class="form-check-input"  type="radio" name="timePreference" value="morning" [(ngModel)]="userModel.timePreference" >
             <label for="" class="form-check-label"> Morning (9 A.M - 12 PM) </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="timePreference" value="evening" >
+            <input class="form-check-input" type="radio" name="timePreference" value="evening" [(ngModel)]="userModel.timePreference">
             <label  class="form-check-label"> Evening (5PM - 8PM ) </label>
           </div>
       </div>
       <div class="form-check mb-3">
-        <input type="checkbox" class="form-check-input"  name="subscribe"/>
+        <input type="checkbox" class="form-check-input" [(ngModel)]="userModel.subscribe"  name="subscribe"/>
         <label for="" class="form-check-label"> Send me promotional offers</label>
       </div>
   
