--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,8 @@
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input type="email" #email class="form-control " [(ngModel)]="userModel.email" name="email">
-            <!-- email input is touched : {{email.touched}} -->
-            {{email.className}}
+          <input type="email" #email="ngModel" class="form-control " [(ngModel)]="userModel.email" name="email" required>
+          <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required</small>
         </div>
         <div class="form-group">
           <label>Telephone</label>
