created and included reactive form component, initialize html template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<hr/>
 <div class="container-fluid mb-5" >
     <h1>
         Bootcamp enrollment form
@@ -74,4 +75,7 @@
   
       <button class="btn btn-primary" [disabled]="userForm.form.invalid || topHasError">Submit</button>
     </form>
+  
   </div>
+  <hr>
+  <app-reactive-form></app-reactive-form>
