--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,18 +1,19 @@
 <div class="container-fluid">
     <h2>Registration Form</h2>
-    <form>
+    <form [formGroup]="registrationForm">
         <div class="form-group">
             <label name="username">Username</label>
-            <input type="text" class="form-control" name="username"/>
+            <input type="text" class="form-control" formControlName="username"/>
         </div>
         <div class="form-group">
             <label>password</label>
-            <input type="password" name="password" class="form-control"/>
+            <input type="password" class="form-control" formControlName="password"/>
         </div>
         <div class="form-group">
             <label>Confirm password</label>
-            <input type="password" name="confirmPassword" class="form-control"/>
+            <input type="password" name="confirmPassword" class="form-control" formControlName="confirmPassword"/>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
+    {{registrationForm.value | json}}
 </div>
