--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <p>  {{registrationForm.value | json}}</p>
     <h2>Registration Form</h2>
     <form [formGroup]="registrationForm">
         <div class="form-group">
@@ -12,8 +13,22 @@
         <div class="form-group">
             <label>Confirm password</label>
             <input type="password" name="confirmPassword" class="form-control" formControlName="confirmPassword"/>
+        </div>  
+        <div formGroupName="address">
+            <div class="form-group">
+                <label for="" class=""> City</label>
+                <input type="text" class="form-control"  formControlName="city">
+              </div>
+              <div class="form-group">
+                <label for="" class=""> State</label>
+                <input type="text" class="form-control"  formControlName="state" >
+              </div>
+              <div class="form-group">
+                <label for="" class=""> Postal Code</label>
+                <input type="text" class="form-control"   formControlName="postalCode" >
+              </div>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
-    {{registrationForm.value | json}}
+  
 </div>
