Managing control values: form values

--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -29,6 +29,8 @@
               </div>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-secondary ml-2" type="button" (click)="loadApiData()">Load API Data</button>
+        <button class="btn btn-secondary btn-danger ml-2" type="button" (click)="clearForm"> clear Form</button>
     </form>
   
 </div>
